--- a/src/Style/Blog.scss
+++ b/src/Style/Blog.scss
@@ -6,9 +6,9 @@
     padding: 24px;
   }
 }
-.bloghead{
-    text-align: center;
-    margin-block: 1rem 10vh;
+.bloghead {
+  text-align: center;
+  margin-block: 1rem 10vh;
 }
 .blog-grid {
   display: grid;
@@ -88,18 +88,17 @@
 
   .text {
     margin-left: 4px;
-    color: #94a3b8;
   }
 }
 
 .blog-title {
   margin-top: 20px;
   overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3; /* number of lines to show */
-            line-clamp: 3;
-    -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .title-link {
@@ -116,12 +115,12 @@
   font-size: 13px;
 }
 .excerpt {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3; /* number of lines to show */
-            line-clamp: 3;
-    -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .blog-footer {
@@ -129,19 +128,19 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
-  
+
   .text {
-      font-family: 'Neue', Inter, system-ui, Avenir;
-  font-size: 12px;
-  margin-left: 4px;
+    font-family: "Neue", Inter, system-ui, Avenir;
+    font-size: 12px;
+    margin-left: 4px;
     text-transform: capitalize;
   }
-  .more{
-  color: var(--accent);
-  text-decoration: underline;
-  &:hover {
-translate: 5px 0;
-}
+  .more {
+    color: var(--accent);
+    text-decoration: underline;
+    &:hover {
+      translate: 5px 0;
+    }
   }
 }
 
@@ -157,10 +156,6 @@ translate: 5px 0;
 
   .author-name {
     margin-left: 4px;
-
-    &:hover {
-        color: var(--accent);
-    }
   }
 }
 
@@ -172,9 +167,7 @@ translate: 5px 0;
     height: 16px;
     width: 16px;
   }
-
 }
-
 
 .pagination {
   display: grid;
@@ -187,9 +180,9 @@ translate: 5px 0;
     align-items: center;
     gap: 4px;
   }
-.chevleft{
+  .chevleft {
     transform: rotate(180deg);
-}
+  }
   .pagination-item {
     display: inline-flex;
     justify-content: center;
@@ -267,5 +260,267 @@ translate: 5px 0;
     max-width: 1536px;
     padding-right: 13rem;
     padding-left: 13rem;
+  }
+}
+
+// blog post page
+
+.blog-details-header {
+  position: relative;
+  padding-top: 36px;
+  min-height: unset;
+
+  @media (min-width: 768px) {
+    padding-top: 44px;
+  }
+
+  .blogWrap {
+    position: relative;
+  }
+
+  .header-content {
+    display: flex;
+    justify-content: center;
+  }
+
+  .header-text {
+    width: 100%;
+    text-transform: uppercase;
+
+    @media (min-width: 768px) {
+      width: 80%;
+    }
+
+    @media (min-width: 1024px) {
+      width: 66.666%;
+    }
+
+    .tag {
+      background-color: var(--accent);
+      color: white;
+      font-size: 12px;
+      font-weight: 600;
+      padding: 2px 10px;
+      border-radius: 4px;
+      height: 20px;
+    }
+
+    .title {
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 12px;
+      line-height: normal;
+
+      @media (min-width: 768px) {
+        font-size: 36px;
+        line-height: normal;
+      }
+    }
+
+    .description {
+      font-size: 18px;
+      margin-top: 12px;
+    }
+
+    .author-details {
+      display: flex;
+      align-items: center;
+      margin-top: 20px;
+
+      .author-image {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+      }
+
+      .author-info {
+        margin-left: 8px;
+        gap: 2rem;
+
+        .author-name {
+          font-weight: 600;
+          font-size: 0.7rem;
+        }
+
+        .follow-link {
+          margin-left: 4px;
+          background-color: var(--accent);
+          border-radius: 50%;
+          width: 30px;
+          height: 30px;
+          align-content: center;
+          text-align: center;
+
+          .mdi-circle-medium {
+            margin-right: 4px;
+          }
+        }
+
+        .date-info {
+          font-size: 0.7rem;
+          p {
+            font-size: 0.7rem;
+          }
+          .mdi-circle-medium {
+            margin-right: 4px;
+          }
+        }
+      }
+    }
+  }
+}
+
+.blog-details-content {
+  position: relative;
+  margin-bottom: 10vh;
+  padding-bottom: 16px;
+  padding-top: 28px;
+
+  @media (min-width: 768px) {
+    padding-bottom: 24px;
+  }
+
+  .blogWrap {
+    position: relative;
+  }
+
+  .content-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+
+  .content-text {
+    width: 100%;
+
+    @media (min-width: 770px) {
+      width: 80%;
+    }
+
+    @media (min-width: 1024px) {
+      width: 66.666%;
+    }
+
+    .content-image {
+      border-radius: 4px;
+      width: 100%;
+      margin-block: 2.5vh;
+    }
+
+    .content-paragraph {
+      margin-top: 16px;
+      line-height: 1.25;
+    }
+
+    .quote-section {
+      position: relative;
+      border-left: 4px solid var(--accent);
+      padding: 40px 24px;
+      margin-top: 16px;
+      border-radius: 4px;
+      background-color: #d5d5d5;
+
+      .quote {
+        font-size: 24px;
+        font-weight: 600;
+      }
+
+      .quote-author {
+        color: var(--accent);
+        margin-top: 16px;
+        text-align: right;
+      }
+
+      .quote-icon {
+        position: absolute;
+        font-size: 96px;
+        color: rgba(253, 216, 53, 0.1);
+        top: 0;
+        left: 16px;
+        z-index: -1;
+      }
+    }
+  }
+}
+
+.blogswiper {
+  min-height: 0;
+  background: var(--bg-dark);
+  color: white;
+
+  h3 {
+    text-transform: uppercase;
+    margin-block: 2rem;
+  }
+
+  .swiperNoswiping {
+    min-height: unset;
+    .motionDiv {
+      gap: 2rem;
+      width: calc(100vw - 4rem);
+    }
+  }
+  .blog-item {
+    width: calc(100vw / 3);
+    min-height: 250px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid white;
+    border-radius: 20px;
+    color: white;
+
+    .swipe-date {
+      font-size: 12px;
+    }
+
+    a.Blogswiper-link {
+      text-align: left;
+      font-size: 14px;
+      h6 {
+        letter-spacing: 1.2px;
+        text-transform: uppercase;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 6; /* number of lines to show */
+        line-clamp: 6;
+        -webkit-box-orient: vertical;
+      }
+    }
+
+    img {
+      max-width: 200px;
+      border-radius: 20px;
+    }
+    .blogswipe-info {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      justify-content: space-around;
+      align-items: flex-start;
+      padding-inline: 1rem;
+    }
+  }
+
+  .arrow-ctrl {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    margin-top: 1rem;
+  }
+  .prev-arrow,
+  .next-arrow {
+    width: 40px;
+    height: 40px;
+    background: rgba(0, 0, 0, 0.5);
+    color: #ffffff;
+    border: 2px solid white;
+    padding: 0;
+    font-size: 18px;
+    cursor: pointer;
   }
 }
