--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -68,71 +68,7 @@
     cursor: help;
     opacity: 1;
   }
-  }
-//   @supports (animation-timeline: view()) {
-//     @-webkit-keyframes fade-out-left {
-//       from {
-//         opacity: 1;
-//       }
-//       to {
-//         opacity: 0;
-//         transform: translateX(-30vw);
-//       }
-//     }
-//     @keyframes fade-out-left {
-//       from {
-//         opacity: 1;
-//       }
-//       to {
-//         opacity: 0;
-//         transform: translateX(-30vw);
-//       }
-//     }
-
-//     @-webkit-keyframes fade-out-right {
-//       from {
-//         opacity: 1;
-//       }
-//       to {
-//         opacity: 0;
-//         transform: translateX(30vw);
-//       }
-//     }
-
-//     @keyframes fade-out-right {
-//       from {
-//         opacity: 1;
-//       }
-//       to {
-//         opacity: 0;
-//         transform: translateX(30vw);
-//       }
-//     }
-
-//   @-webkit-keyframes shadow-in {
-//     to {
-//       box-shadow: 0 10px 10px #0003;
-//     }
-//   }
-
-//   @keyframes shadow-in {
-//     to {
-//       box-shadow: 0 10px 10px #0003;
-//     }
-//   }
-//   .over-scroll {
-//     -webkit-animation: fade-out-left auto ease-in both;
-//     animation: fade-out-left auto ease-in both;
-//     animation-timeline: scroll();
-//     animation-range: 0% 2%;
-//   }
-//   .over-cont {
-//     -webkit-animation: fade-out-right auto ease-in both;
-//     animation: fade-out-right auto ease-in both;
-//     animation-timeline: scroll();
-//     animation-range: 0% 2%;
-//   }
-// }
+}
 
 //spotlight button
 .primary-btn {
@@ -162,67 +98,11 @@
 }
 
 .mgBtn {
-  // position: absolute;
-  // bottom: calc(0% - 15vh);
-  // left: 50%;
-  // translate: -50% -50%;
-  // margin-top: 4vh;
   pointer-events: all;
   cursor: pointer;
   -webkit-animation: jump 10s ease infinite;
   animation: jump 10s ease infinite;
-  // button {
-  //   width: 200px;
-  //   height: 70px;
-  //   border-radius: 15px;
-  //   border: 1px solid #ffffff5f !important;
-  //   margin: 2.5vw;
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: space-evenly;
-  //   align-items: center;
-  //   text-transform: uppercase;
-  //   position: relative;
-  //   background: transparent;
-  //   transition: all 3s ease-in-out;
 
-  //   // -webkit-animation: grad 11s ease infinite;
-  //   // -moz-animation: grad 11s ease infinite;
-  //   // animation: grad 11s ease infinite;
-  //   lord-icon {
-  //     width: 50px;
-  //     height: 50px;
-  //     rotate: 90deg;
-  //     margin: 0;
-  //   }
-  //   &::before {
-  //     content: "";
-  //     position: absolute;
-  //     top: 0%;
-  //     left: 50%;
-  //     translate: -50%;
-  //     width: 100%;
-  //     height: 100%;
-  //     border: 1px solid hsla(0, 0%, 100%, 0.7);
-  //     border-radius: 15px;
-  //     z-index: -1;
-  //     transition: all 3s ease-in-out;
-  //   }
-  //   &:focus,
-  //   &:focus-visible {
-  //     outline: none;
-  //   }
-  //   &:hover {
-  //     border: 1px solid hsla(335, 90%, 60%, 0.7) !important;
-  //     animation: morph 5s ease-in-out infinite both;
-  //     &::before {
-  //       width: calc(100% + 10px);
-  //       height: calc(100% + 10px);
-  //       top: calc(0% - 5px);
-  //       animation: morph 10s ease-in-out infinite backwards;
-  //     }
-  //   }
-  // }
   .primary-btn {
     padding: 20px 40px;
     position: relative;
@@ -475,8 +355,8 @@
   }
   .postImg {
     position: absolute;
-    height: 300px;
-    width: 400px;
+    height: 100%;
+    width: auto;
     border-radius: 20px;
     -o-object-fit: scale-down;
     object-fit: scale-down;
@@ -629,6 +509,10 @@ th {
     }
   }
 
+  .chevleft {
+    transform: rotate(180deg);
+  }
+
   .dots {
     position: absolute;
     bottom: 0;
@@ -684,6 +568,10 @@ th {
       padding-inline: 0;
     }
   }
+  .blogswiper .blog-item {
+    width: 100vw !important;
+  }
+
   .swiperNoswiping {
     min-height: 400px;
   }
