--- a/src/Components/preloader.css
+++ b/src/Components/preloader.css
@@ -24,22 +24,20 @@
 
 .pace .pace-progress::before {
 	transform: translatex(50%) translateY(var(--progress-top, 0));
-	/* top: calc(50% - 10px); */
 	opacity: var(--progress-opacity, 1);
 	transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1), opacity 1s cubic-bezier(0.19, 1, 0.22, 1);
 	top: calc(50% - 70px);
 	right: calc(50% + 5px);
-	/* margin-bottom: 10px; */
-	/* transform: translate(50%, 0); */
+
 	display: block;
 	position: absolute;
-	content: url(./llogo.png);
-	/* font-family: "Helvetica Neue", sans-serif; */
-	font-weight: 100;
-	font-size: 1rem;
-	line-height: 1;
+	content:'' ;
+	background-image: url(./llogo.png);
+	width: 50px;
+    height: 50px;
+    background-repeat: no-repeat;
+    background-position: center;
 	text-align: center;
-	color: rgb(255, 255, 255);
 	/* transition: top 1.5s ease, opacity 1s ease ; */
 
 }
