--- a/src/Style/Blog.css
+++ b/src/Style/Blog.css
@@ -52,7 +52,11 @@
 }
 
 .blog-content {
+  display: flex;
   padding-top: 16px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
 }
 
 .blog-header {
@@ -247,12 +251,29 @@
     padding-right: 5rem;
     padding-left: 5rem;
   }
+  .blog-content {
+    gap: 1rem;
+  }
 }
-@media (min-width: 1536px) {
+@media (min-width: 1650px) {
   .blogWrap {
-    max-width: 1536px;
-    padding-right: 13rem;
-    padding-left: 13rem;
+    max-width: 1600px;
+  }
+  .blogswiper .arrow-ctrl .prev-arrow,
+  .blogswiper .arrow-ctrl .next-arrow {
+    width: 70px;
+    height: 70px;
+  }
+  .blog-grid {
+    gap: 2rem;
+  }
+}
+@media (min-width: 2000px) {
+  .blogWrap {
+    max-width: 2000px;
+  }
+  .blogWrap .blog-grid {
+    gap: 3rem;
   }
 }
 .blog-details-header {
@@ -281,11 +302,6 @@
     width: 80%;
   }
 }
-@media (min-width: 1024px) {
-  .blog-details-header .header-text {
-    width: 66.666%;
-  }
-}
 .blog-details-header .header-text .tag {
   background-color: var(--accent);
   color: white;
@@ -296,7 +312,6 @@
   height: 20px;
 }
 .blog-details-header .header-text .title {
-  font-size: 24px;
   font-weight: bold;
   margin-top: 12px;
   line-height: normal;
@@ -375,11 +390,6 @@
 @media (min-width: 770px) {
   .blog-details-content .content-text {
     width: 80%;
-  }
-}
-@media (min-width: 1024px) {
-  .blog-details-content .content-text {
-    width: 66.666%;
   }
 }
 .blog-details-content .content-text .content-image {
@@ -492,4 +502,8 @@
   padding: 0;
   font-size: 18px;
   cursor: pointer;
+}
+.blogswiper .prev-arrow:hover,
+.blogswiper .next-arrow:hover {
+  scale: 1.1;
 }/*# sourceMappingURL=Blog.css.map */
