--- a/src/Components/preloader.css
+++ b/src/Components/preloader.css
@@ -32,7 +32,7 @@
 	display: block;
 	position: absolute;
 	content:'' ;
-	background-image: url(./llogo.png);
+	background-image: url(/llogo.png);
 	width: 50px;
     height: 50px;
     background-repeat: no-repeat;
@@ -45,22 +45,18 @@
 
 .pace .pace-progress::after {
 	transform: translatex(50%) translateY(var(--progress-top, 0));
-	/* top: var(--progress-top, 50%); */
 	opacity: var(--progress-opacity, 1);
 	transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1) 0.5s, opacity 1s cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
 	top: 50%;
 	right: 50%;
-	/* transform: translate(50%, 0); */
 	display: block;
 	position: absolute;
 	content: attr(data-progress-text);
-	/* font-family: "Helvetica Neue", sans-serif; */
 	font-weight: 100;
 	font-size: 1rem;
 	line-height: 1;
 	text-align: center;
 	color: rgb(255, 255, 255);
-	/* transition: top 1s ease, opacity 1s ease; */
 
 }
 
