--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -242,6 +242,7 @@
     // min-height: 90vh;
     background-color: white;
     border-radius: 15px;
+    touch-action: pan-x;
   }
 }
 
@@ -563,7 +564,7 @@
     }
     .list {
       h5 {
-        background: black;
+        // background: black;
         color: white;
         z-index: 1;
         line-break: anywhere;
