--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -130,6 +130,7 @@
   rotate: 45deg;
   border-radius: 50%;
   transition: all 0.5s ease;
+  aspect-ratio: 1;
 }
 .arrow:hover {
   box-shadow: 0px 0px 5px #a61853;
