--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -148,6 +148,7 @@
   rotate: 45deg;
   border-radius: 50%;
   transition: all 0.5s ease;
+  aspect-ratio: 1;
 
   &:hover {
     box-shadow: 0px 0px 5px #a61853;
