--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -35,7 +35,7 @@
     &::before {
       content: "";
       position: absolute;
-      bottom: -150px;
+      bottom: -170px;
       height: 200px;
       width: 15px;
       border-right: 1px solid;
@@ -291,6 +291,7 @@
       outline: 2px solid black;
       background-color: white;
       transition: all 0.5s ease;
+      padding: 2.5rem;
 
       .button {
         position: absolute;
@@ -304,8 +305,8 @@
     }
     img {
       width: 100%;
-      -o-object-fit: scale-down;
-      object-fit: scale-down;
+      -o-object-fit: contain;
+      object-fit: contain;
       aspect-ratio: 1 / 1;
       transition: all 0.8s ease;
     }
@@ -517,10 +518,11 @@ th {
   }
 
   .dots {
+    display: none;
     position: absolute;
     bottom: 0;
     margin-top: 3rem;
-    display: flex;
+    // display: flex;
     width: 100%;
     justify-content: center;
     gap: 0.5rem; /* gap-2 */
@@ -552,6 +554,7 @@ th {
   img {
     -o-object-fit: contain;
     object-fit: contain;
+    max-width: 450px;
   }
 }
 
@@ -576,7 +579,10 @@ th {
   }
 
   .swiperNoswiping {
-    min-height: 400px;
+    min-height: 500px;
+    .dots {
+      display: flex;
+    }
   }
   .swiperNoswiping:has(.var2) {
     min-height: 350px;
@@ -585,7 +591,13 @@ th {
       bottom: -100px;
     }
   }
+.imgWrap, .imgWrap2{
+  padding: 0;
 
+  img{
+    object-fit: scale-down;  
+  }
+}
   .var2 .listItem h4 {
     line-break: anywhere;
   }
@@ -713,10 +725,13 @@ th {
     gap: 10vh;
     padding-inline: clamp(5%, 5vw, 10%);
     h1 {
-      font-size: clamp(4.44rem, 10vw, 7rem);
+      font-size: clamp(4.44rem, 10vw, 7rem);   
     }
     h2 {
       font-size: clamp(3.5rem, 10vw, 4.6rem);
+    }
+    .prodHead h1 img{
+      height: clamp(4.44rem, 10vw, 7rem) !important;
     }
   }
   .blog {
@@ -904,6 +919,9 @@ th {
     }
     h2 {
       font-size: clamp(3.5rem, 10vw, 6.6rem);
+    }
+    .prodHead h1 img{
+      height: clamp(5.44rem, 10vw, 8.25rem) !important;
     }
   }
   .blog {
