--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -431,8 +431,10 @@
   justify-content: space-evenly;
   padding-inline: 10vw;
   gap: 3em;
-  margin-block: 5vh;
+  // margin-block: 5vh;
   scroll-snap-align: none !important;
+  transition: all 0.5s ease;
+
 
   h3 {
     text-transform: uppercase;
