pace onetime load, product animation halfway

--- a/src/Components/preloader.css
+++ b/src/Components/preloader.css
@@ -1,6 +1,6 @@
 .pace {
-	-webkit-pointer-events: none;
-	pointer-events: none;
+	/* -webkit-pointer-events: none;
+	pointer-events: none; */
 
 	-webkit-user-select: none;
 	-moz-user-select: none;
