--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -282,6 +282,19 @@
   }
 }
 
+.fade{
+  opacity: var(--op-variable);
+  transition: all 0.5s ease-in-out;
+}
+.titleLight{
+  -webkit-text-stroke-color: var(--text-color);
+  color: var(--text-color);
+}
+.titleDark{
+  -webkit-text-stroke-color: var(--text-dark);
+  color: var(--text-dark);
+}
+
 .pCont {
   position: relative;
   min-height: auto;
