--- a/src/Style/Contact/contact.scss
+++ b/src/Style/Contact/contact.scss
@@ -32,7 +32,10 @@
 
   h1 {
     font-size: clamp(2.35rem, 10vw, 5.5rem);
-    line-break: anywhere;
+    // line-break: anywhere;
+    word-break: break-word;
+    hyphens: auto;
+    overflow-wrap: anywhere;
   }
 }
 
