--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100vh;
   position: absolute;
+  pointer-events: none;
 }
 .over-cont {
   position: fixed;
@@ -47,6 +48,7 @@
   -webkit-filter: grayscale(1) invert(1);
   filter: grayscale(1) invert(1);
   transition: transform 2s ease-in-out;
+  pointer-events: all;
 }
 .fixed-aside a {
   font-weight: revert;
@@ -251,6 +253,8 @@
     }
     h5 {
       background: transparent !important;
+    text-transform: none;
+
     }
   }
   .listItem {
