--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -121,10 +121,10 @@
 }
 .redText .text {
   position: relative;
-  width: 60%;
+  width: calc(60% + 1.5rem);
   color: white;
   margin: auto;
-  padding: 1em;
+  padding: 1.5rem;
   text-transform: uppercase;
   z-index: 1;
 }
@@ -133,13 +133,14 @@
   inset: 0;
   width: 100%;
   height: 100%;
+  border-radius: 10px;
   background-color: rgba(159, 1, 66, 0.7);
   mix-blend-mode: hard-light;
 }
 
 .videoSec {
   padding-top: 15vh;
-  height: 200vh;
+  height: 150vh;
   text-align: -webkit-center;
   text-align: center;
   position: relative;
@@ -201,6 +202,7 @@
 .product .prodHead h1 {
   width: -moz-min-content;
   width: min-content;
+  overflow: hidden;
   position: relative;
 }
 .product .prodHead h1 img {
@@ -272,8 +274,7 @@
     font-size: clamp(2rem, 10vw, 3.6rem);
   }
   .redText .text {
-    width: 80%;
-    padding: 0;
+    width: calc(80% + 1.5rem);
   }
   .redText .text h3 {
     font-size: clamp(1.3rem, 5vw, 3.5rem);
