--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -133,10 +133,10 @@
   overflow-x: hidden;
   .text {
     position: relative;
-    width: 60%;
+    width: calc(60% + 1.5rem);
     color: white;
     margin: auto;
-    padding: 1em;
+    padding: 1.5rem;
     text-transform: uppercase;
     z-index: 1;
   }
@@ -145,6 +145,7 @@
     inset: 0;
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     background-color: rgb(159 1 66 / 70%);
     mix-blend-mode: hard-light;
   }
@@ -153,7 +154,7 @@
 .videoSec {
   padding-top: 15vh;
   // padding-bottom: 30vh;
-  height: 200vh;
+  height: 150vh;
   text-align: -webkit-center;
   text-align: center;
   position: relative;
@@ -221,6 +222,7 @@
       width: -webkit-min-content;
       width: -moz-min-content;
       width: min-content;
+      overflow: hidden;
       position: relative;
       img {
         height: clamp(2.25rem, 10vw, 5.5rem);
@@ -309,8 +311,8 @@
 
   .redText {
     .text {
-      width: 80%;
-      padding: 0;
+      width: calc(80% + 1.5rem);
+      // padding: 0;
 
       h3 {
         font-size: Clamp(1.3rem, 5vw, 3.5rem);
