--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -7,7 +7,7 @@
   padding-block: 10vh;
 
   h1 {
-    font-size: clamp(3.25rem, 10vw, 7.55rem);
+    font-size: clamp(3.25rem, 10vw, 6.55rem);
     overflow-wrap: anywhere;
   }
   & > img {
@@ -242,6 +242,11 @@
     border-radius: 15px;
     touch-action: pan-x;
   }
+  h2{
+    word-break: break-word;
+    hyphens: auto;
+    overflow-wrap: anywhere;
+  }
 }
 
 .Pwrap {
@@ -304,7 +309,7 @@
   justify-content: space-around;
   text-align: center;
   gap: 5vh;
-  padding-block: 10vh;
+  padding-block: 30vh;
   z-index: 2;
 
   .cont-form {
@@ -358,7 +363,7 @@
       background: none;
       border: none;
       color: var(--text-dark);
-      text-transform: uppercase;
+      text-transform: capitalize;
       background-color: transparent;
       option {
         background: var(--bg-color) !important;
@@ -529,7 +534,7 @@
     overflow-x: hidden;
 
     h1 {
-      font-size: clamp(4rem, 10vw, 7.55rem);
+      font-size: clamp(2.5rem, 10vw, 6.55rem);
       // overflow-wrap: anywhere;
       word-break: break-word;
       hyphens: auto;
