--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -24,10 +24,10 @@
         // -webkit-filter: invert(1);
         //         filter: invert(1);
         img {
-            aspect-ratio: 1;
+            // aspect-ratio: 1;
             transition: all 0.4s ease;
             height: 100px;
-            padding-top: 10px;
+            // padding-top: 10px;
             // filter: contrast(0) brightness(10) grayscale(1);
         }
 
@@ -56,8 +56,7 @@
 .nav__logo {
     z-index: 16;
     img {
-        height: var(--header-height);
-        aspect-ratio: unset;
+        height: 100px;
         // filter: contrast(0) brightness(10) grayscale(1);
     }
 }
