--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -241,6 +241,10 @@
     background-color: white;
     border-radius: 15px;
     touch-action: pan-x;
+
+    td{
+      filter: invert(1) hue-rotate(180deg)
+    }
   }
   h2{
     word-break: break-word;
