faster animation and slide,

--- a/src/Style/Contact/contact.scss
+++ b/src/Style/Contact/contact.scss
@@ -209,11 +209,14 @@
   }
 
   .cont-detail ul {
-    flex-direction: column;
     row-gap: 30px;
     align-items: baseline;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    flex-direction: row;
+    justify-content: center;
     margin-block: 5vh;
-    /* align-content: flex-start; */
+    
   }
   .cont-info-text h1 {
     text-align: center;
@@ -244,7 +247,11 @@
   .cont-detail ul {
     row-gap: 50px;
     text-align: center;
-    align-items: center;
+    align-items: baseline;
+    flex-wrap: wrap;
+    column-gap: 50px;
+    flex-direction: row;
+    justify-content: center;
   }
   .cont-info {
     margin-bottom: 0;
