--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -239,9 +239,10 @@
   z-index: 1;
   text-align: -webkit-center;
   min-height: 0;
+  padding: 0;
 }
 .LogoDisp img {
-  width: 20%;
+  width: 40%;
   transition: all 1s ease;
 }
 
