--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -267,10 +267,10 @@
   z-index: 1;
   text-align: -webkit-center;
   min-height: 0;
-  // display: none;
+  padding: 0;
 
   img {
-    width: 20%;
+    width: 40%;
     transition: all 1s ease;
   }
 }
