--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -77,7 +77,7 @@
   content: "";
   position: absolute;
   top: 13px;
-  left: -18px;
+  left: calc(-1em - 5px);
   transition: bottom 0.7s ease;
 }
 .pFeature li.animate::before {
@@ -95,7 +95,7 @@
     bottom: 45px;
   }
   100% {
-    bottom: -25px;
+    bottom: -24px;
   }
 }
 .pModel {
@@ -513,9 +513,6 @@
   }
 }
 @media (max-width: 500px) {
-  .pFeature li::before {
-    left: -16px;
-  }
   .pInfo {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
