--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -84,7 +84,7 @@
       content: "";
       position: absolute;
       top: 13px;
-      left: -18px;
+      left: Calc(-1em - 5px);
       transition: bottom 0.7s ease;
     }
     &.animate::before {
@@ -109,7 +109,7 @@
     bottom: 45px;
   }
   100% {
-    bottom: -25px;
+    bottom: -24px;
   }
 }
 @keyframes xtend {
@@ -117,7 +117,7 @@
     bottom: 45px;
   }
   100% {
-    bottom: -25px;
+    bottom: -24px;
   }
 }
 
@@ -607,9 +607,7 @@
   }
 }
 @media (max-width: 500px) {
-  .pFeature li::before {
-    left: -16px;
-  }
+
   .pInfo {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
