--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -78,10 +78,10 @@
   position: absolute;
   top: 10px;
   left: calc(-1em - 5px);
-  transition: bottom 0.7s ease;
+  transition: bottom 0.5s ease;
 }
 .pFeature li.animate::before {
-  animation: xtend 0.7s forwards; /* Trigger animation */
+  animation: xtend 0.5s forwards; /* Trigger animation */
 }
 .pFeature li:last-child::before {
   display: none;
@@ -511,8 +511,15 @@
   .pCont .cont-form {
     width: 100%;
   }
+  .Pwrap {
+    padding-top: 10vh !important;
+  }
 }
 @media (max-width: 500px) {
+  .pFeature li::before {
+    top: 5px;
+    left: -1.5em;
+  }
   .pInfo {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
